# exfatify

./: .gitignore  Cargo.toml  README.md
src/: checker.rs  cli.rs  constants.rs  lib.rs  logger.rs  main.rs  processor.rs  sanitizer.rs
tests/: directory_processing_api.rs  sanitization_api.rs
